--- a/PizzaPlaceSalesAPI/appsettings.json
+++ b/PizzaPlaceSalesAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-64BENGS\\SQLEXPRESS;Initial Catalog=PizzaPlaceSales;Integrated Security=True"
+  }
 }
