Create table using EF migration

--- a/PizzaPlaceSalesAPI/appsettings.json
+++ b/PizzaPlaceSalesAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-64BENGS\\SQLEXPRESS;Initial Catalog=PizzaPlaceSales;Integrated Security=True"
+    "DefaultConnection": "----CONNECTION--STRING--HERE!!----"
   }
 }
