--- a/PizzaPlaceSalesAPI/appsettings.json
+++ b/PizzaPlaceSalesAPI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "----CONNECTION--STRING--HERE!!----"
+    //"DefaultConnection": "----CONNECTION--STRING--HERE!!----"
+    "DefaultConnection": "Data Source=DESKTOP-64BENGS\\SQLEXPRESS;Initial Catalog=PizzaPlaceSales;Integrated Security=True;TrustServerCertificate=True"
   }
 }
